fix: table of content Displaying on mobile devices

--- a/apps/theme-cosy/src/assets/style/media.less
+++ b/apps/theme-cosy/src/assets/style/media.less
@@ -19,11 +19,8 @@
   }
 
   .post-container {
-    // > header {
-    //   display: none !important;
-    // }
-    .meta-container {
-      max-width: 220px !important;
+    #toc-drag-box {
+      left: -1px;
     }
   }
 
